@@ -1,2 +1,3 @@
-.build
-Dist-Zilla-Plugin-Prereqs-SyncVersions-*
+/.build
+/Dist-Zilla-Plugin-Prereqs-SyncVersions-*
+/tmp/
