@@ -43,11 +43,13 @@ include_dotfiles = 1
 
 [MetaJSON / @Author::KENTNL/MetaJSON]
 
-[MetaYAML / @Author::KENTNL/MetaYAML]
+[MetaYAML::Minimal / @Author::KENTNL/MetaYAML::Minimal]
 
 [Manifest / @Author::KENTNL/Manifest]
 
 [Author::KENTNL::TravisCI / @Author::KENTNL/Author::KENTNL::TravisCI]
+:version = 0.001002
+
 
 [CopyFilesFromBuild / @Author::KENTNL/CopyXBuild]
 copy = LICENSE
@@ -68,6 +70,8 @@ trailing_whitespace = 1
 [Test::MinimumVersion / @Author::KENTNL/Test::MinimumVersion]
 
 [Test::Compile::PerFile / @Author::KENTNL/Test::Compile::PerFile]
+:version = 0.003902
+test_template = 02-raw-require.t.tpl
 
 [Test::Perl::Critic / @Author::KENTNL/Test::Perl::Critic]
 
@@ -86,7 +90,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.023002
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.025021
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
@@ -102,7 +106,7 @@ locate_comment = 1
 default_jobs = 10
 
 [Author::KENTNL::RecommendFixes / @Author::KENTNL/Author::KENTNL::RecommendFixes]
-:version = 0.001001
+:version = 0.004002
 
 [Readme::Brief / @Author::KENTNL/ShippedReadme]
 
@@ -130,6 +134,7 @@ tag_format = %v-source
 
 [Git::NextRelease / @Author::KENTNL/Git::NextRelease]
 :version = 0.004000
+default_branch = master
 format = %v %{yyyy-MM-dd'T'HH:mm:ss}dZ %h
 time_zone = UTC
 
@@ -139,6 +144,7 @@ time_zone = UTC
 allow_dirty_match = ^lib/
 
 [Git::CommitBuild / @Author::KENTNL/Git::CommitBuild]
+branch = builds
 release_branch = releases
 
 [Git::Tag / @Author::KENTNL/tag_release]
@@ -169,11 +175,13 @@ applyto_phase = develop
 modules = Dist::Zilla::PluginBundle::Author::KENTNL
 modules = Dist::Zilla::App::Command::bakeini
 
+[RemovePrereqs::Provided / @Author::KENTNL/RemovePrereqs::Provided]
+
 [Prereqs / @Author::KENTNL/::Role::BundleDeps]
 -phase = develop
 -relationship = requires
-Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.001001
-Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0
+Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.004002
+Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0.001002
 Dist::Zilla::Plugin::Authority = 1.006
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::BumpVersionAfterRelease = 0
@@ -196,7 +204,7 @@ Dist::Zilla::Plugin::MetaData::BuiltWith = 1.004000
 Dist::Zilla::Plugin::MetaJSON = 0
 Dist::Zilla::Plugin::MetaProvides::Package = 1.14000001
 Dist::Zilla::Plugin::MetaTests = 0
-Dist::Zilla::Plugin::MetaYAML = 0
+Dist::Zilla::Plugin::MetaYAML::Minimal = 0
 Dist::Zilla::Plugin::MinimumPerl = 0
 Dist::Zilla::Plugin::PodCoverageTests = 0
 Dist::Zilla::Plugin::PodSyntaxTests = 0
@@ -207,10 +215,11 @@ Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
 Dist::Zilla::Plugin::Prereqs::Upgrade = 0
 Dist::Zilla::Plugin::Readme::Brief = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
+Dist::Zilla::Plugin::RemovePrereqs::Provided = 0
 Dist::Zilla::Plugin::RewriteVersion::Sanitized = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
-Dist::Zilla::Plugin::Test::Compile::PerFile = 0
+Dist::Zilla::Plugin::Test::Compile::PerFile = 0.003902
 Dist::Zilla::Plugin::Test::EOL = 0
 Dist::Zilla::Plugin::Test::Kwalitee = 0
 Dist::Zilla::Plugin::Test::MinimumVersion = 0
