@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.003002
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.003001 2015-02-04T09:48:39Z
  [Added / configure requires]
@@ -64,4 +66,3 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  - IPC::Open3
 
 0.001001 2013-10-12T07:07:17Z
-
