@@ -1,6 +1,8 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.003002
+ [Added / configure suggests]
+ - JSON::PP 2.27300
 
 0.003001 2015-02-04T09:48:39Z
  [Added / runtime recommends]
@@ -35,4 +37,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
  - Test::More 1.001003
 
 0.001001 2013-10-12T07:07:17Z
-
