@@ -1,6 +1,13 @@
 Release history for Dist-Zilla-Plugin-Prereqs-SyncVersions
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures under -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.003001, see misc/*.deps* for details
+ - configure: (suggests: +1)
+ - develop: +5 ↑4 -1 (suggests: ↑2)
+ - test: ↓1
 
 0.003001 2015-02-04T09:48:39Z ae594be
  [Dependencies::Stats]
@@ -80,4 +87,3 @@ Release history for Dist-Zilla-Plugin-Prereqs-SyncVersions
 
 0.001000 2013-10-12T04:50:38Z
  - First version.
-
